platform/policy/kyverno/tests/require-resources/invalid-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invalid-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invalid
  template:
    metadata:
      labels:
        app: invalid
    spec:
      containers:
        - name: app
          image: nginx
